# Win32-GUI-Example

./: CMakeLists.txt  CMakePresets.json
cmake/compiler/: clang_c.cmake  clang_cxx.cmake  config_dispatch.cmake  gcc_c.cmake  gcc_cxx.cmake  msvc_ccxx.cmake
cmake/utility/: clang_format.cmake  clang_tidy.cmake  root_setup.cmake
scripts/: clang-format  clang-format.bat  clang-tidy  clang-tidy.bat
src/: CMakeLists.txt  main.cpp  window_proc.cpp  window_proc.hpp
